@@ -122,6 +122,8 @@ PRADO component tags when you use it to edit PRADO templates.
 <li>Andres Adolfo Testi - original concept and naming for Active Controls.</li>
 <li><a href="http://www.jackslocum.com/">Jack Slocum</a> - inspiration for the quickstart commenting system.</li>
 <li>Cesar Ramos - Active Record driver for IBM DB2.</li>
+<li>Sergey Morkovkin - TKeyboard control</li>
+<li>Tomasz Wolny - TTabPanel control</li>
 <li>All PRADO users - great suggestions, feedback and support</li>
 <li>ASP.NET 2.0 for its great inspiration and reference</li>
 <li>All <a href="framework/3rdParty/readme.html">third-party work</a> used in PRADO</li>
