@@ -21,6 +21,7 @@ CHG: Validators will not validate disabled controls (Qiang)
 NEW: Ticket#676 - Added primilary Oracle support (Christophe)
 NEW: Ticket#680 - Added TCacheHttpSession (Carl, Qiang)
 NEW: Added TTabPanel (Qiang)
+NEW: Added TKeyboard (Qiang)
 NEW: Added Indonesian translation to QuickStart, requirements and error messages (Zaenal Mutaqin)
 
 Version 3.1.0 July 2, 2007
